# Trabalho_Final_NLP

./: .gitignore  README.md  Testing_slurms.py  dockerfile  exec_trm.sh  main.py  pretrain.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
TRM_old/: README.md  exec_trm.sh  pretrain.py  requirements.txt
TRM_old/checkpoints/Sudoku-extreme-1k-aug-1000-ACT-torch/TinyRecursiveReasoningModel_ACTV1 calm-manul/: all_config.yaml
TRM_old/checkpoints/Sudoku-extreme-1k-aug-1000-ACT-torch/pretrain_sudoku/: all_config.yaml
TRM_old/config/: cfg_pretrain.yaml
TRM_old/models/: sparse_embedding.py
data/LoCoGen/: LOCCO.json  LOCCO_L.json
data/PerLTQA/Dataset/: README.md  dataset.py
data/locomo/: global_methods.py  requirements.txt
data/locomo/data/: msc_personas_all.json
data/locomo/generative_agents/: conversation_utils.py  event_utils.py  generate_conversations.py  html_utils.py  memory_utils.py
data/locomo/prompt_examples/: causal_event_kg_example_1.json  causal_event_kg_output_1.json  chatgpt_instructions.json  event_generation_examples.json  fact_generation_examples.json  fact_generation_examples_new.json  graph_generation_examples.json  image_sharing_examples.json  persona_generation_examples.json  remove_context_examples.json  sub_event_generation_examples.json  visual_graph_generation_examples.json
data/locomo/scripts/: env.sh  evaluate_claude.sh  evaluate_gemini.sh  evaluate_gpts.sh  evaluate_hf_llm.sh  evaluate_rag_gpts.sh  generate_conversations.sh  generate_observations.sh  generate_session_summaries.sh
data/locomo/task_eval/: claude_utils.py  evaluate_qa.py  evaluation.py  evaluation_stats.py  gemini_utils.py  get_facts.py  get_session_summaries.py  gpt_utils.py  hf_llm_utils.py  rag_utils.py
evaluate/: ragas.py
models/: hrm.py  mamba.py  transformers.py  transformers_block.py  trm.py  xlstm.py
models/dataset/: PerLTQA.py
retrieval/: base.py  models.py  naive.py  reranker.py  store.py
writing/: memory.py  memory_writer.py  predict.py
(+8 files in other folders)
