[project]
name = "llm-memory-otimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.11.0",
    "argdantic==1.3.3",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "colorama==0.4.6",
    "coolname==2.2.0",
    "einops>=0.8.1",
    "filelock==3.20.0",
    "fsspec==2025.9.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.0.1",
    "hydra-core==1.3.2",
    "idna==3.11",
    "jinja2==3.1.6",
    "kagglehub==0.3.13",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.5",
    "ninja>=1.13.0",
    "numba>=0.62.1",
    "numpy==2.3.4",
    "omegaconf==2.3.0",
    "packaging==25.0",
    "platformdirs==4.5.0",
    "protobuf==6.33.0",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pydantic-settings==2.11.0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "sentry-sdk==2.43.0",
    "setuptools==80.9.0",
    "setuptools-scm>=9.2.2",
    "shellingham==1.5.4",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "torch==2.9.0",
    "tqdm==4.67.1",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "wandb==0.22.3",
    "wheel>=0.45.1",
]
